--- a/index.html
+++ b/index.html
@@ -81,11 +81,95 @@
 
 
     </header>
+<!-- header section ends -->
+
+    <!-- Home section starts -->
+
+    <section class="home" id="home">
+        <div class="content">
+            <h3>fresh coffe in the morning</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nisi veritatis itaque optio tempore fuga!</p>
+            <a href="#" class="btn">get yours now</a>
+        </div>
+    </section>
+
+    <!-- Home section ends -->
+
+<!-- about section stars -->
+
+    <section class="about" id="about">
+        <h1 class="heading"><span>about</span> us </h1>
+        <div class="row">
+            <div class="image">
+                <img src="img/about-img.jpeg" alt="">
+            </div>
+
+            <div class="content">
+                <h3>What makes our coffee special?</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis nihil laboriosam fugiat, aliquid necessitatibus dignissimos cupiditate placeat porro velit distinctio ducimus neque enim in. Odio ducimus eveniet natus amet ex!</p>
+
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus tenetur laborum quam cupiditate, ab amet! Libero exercitationem saepe eius? Molestiae!</p>
+
+                <a href="#" class="btn">clear more</a>
+            </div>
 
 
+        </div>
+    </section>
+<!-- about section ends -->
+
+<!-- Menu section starts -->
+    <section class="menu" id="menu">
+        <h1 class="heading">our <span>menu</span></h1>
+
+        <div class="box-container">
+            <div class="box">
+                <img src="img/menu-1.png" alt="">
+                <h3>tasty and healty</h3>
+                <div class="price">$15.99 <span>20.99</span></div>
+                <a href="#" class="btn">add to cart</a>
+            </div>
+
+            <div class="box">
+                <img src="img/menu-2.png" alt="">
+                <h3>tasty and healty</h3>
+                <div class="price">$15.99 <span>20.99</span></div>
+                <a href="#" class="btn">add to cart</a>
+            </div>
+
+            <div class="box">
+                <img src="img/menu-3.png" alt="">
+                <h3>tasty and healty</h3>
+                <div class="price">$15.99 <span>20.99</span></div>
+                <a href="#" class="btn">add to cart</a>
+            </div>
+
+            <div class="box">
+                <img src="img/menu-4.png" alt="">
+                <h3>tasty and healty</h3>
+                <div class="price">$15.99 <span>20.99</span></div>
+                <a href="#" class="btn">add to cart</a>
+            </div>
+            
+            <div class="box">
+                <img src="img/menu-5.png" alt="">
+                <h3>tasty and healty</h3>
+                <div class="price">$15.99 <span>20.99</span></div>
+                <a href="#" class="btn">add to cart</a>
+            </div>
+
+            <div class="box">
+                <img src="img/menu-6.png" alt="">
+                <h3>tasty and healty</h3>
+                <div class="price">$15.99 <span>20.99</span></div>
+                <a href="#" class="btn">add to cart</a>
+            </div>
 
 
+        </div>
+    </section>
 
+<!-- Menu section ends -->
     <script src="/js/script.js"></script>
 </body> 
 </html>
