--- a/index.html
+++ b/index.html
@@ -170,6 +170,142 @@
     </section>
 
 <!-- Menu section ends -->
+    <!-- Product section starts -->
+        <section class="products" id="products">
+            <h1 class="heading">our <span>products</span></h1>
+            <div class="box-container">
+                <div class="box">
+                    <div class="icons">
+                        <a href="#" class="fas fa-shopping-cart"></a>
+                        <a href="#" class="fas fa-heart"></a>
+                        <a href="#" class="fas fa-eye"></a>
+                    </div>
+                    <div class="image">
+                        <img src="img/product-1.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>fresh coffee</h3>
+                        <div class="starts">'
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                        <div class="price">$15.99 <span>$20.99</span></div>
+                    </div>
+
+                </div>
+
+                <div class="box">
+                    <div class="icons">
+                        <a href="#" class="fas fa-shopping-cart"></a>
+                        <a href="#" class="fas fa-heart"></a>
+                        <a href="#" class="fas fa-eye"></a>
+                    </div>
+                    <div class="image">
+                        <img src="img/product-2.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>fresh coffee</h3>
+                        <div class="starts">'
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                        <div class="price">$15.99 <span>$20.99</span></div>
+                    </div>
+
+                </div>
+
+                <div class="box">
+                    <div class="icons">
+                        <a href="#" class="fas fa-shopping-cart"></a>
+                        <a href="#" class="fas fa-heart"></a>
+                        <a href="#" class="fas fa-eye"></a>
+                    </div>
+                    <div class="image">
+                        <img src="img/product-3.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>fresh coffee</h3>
+                        <div class="starts">'
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                        <div class="price">$15.99 <span>$20.99</span></div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+    <!-- Product section ends -->
+
+<!-- Review section starts -->
+    <section class="review" id="review">
+        <h1 class="heding">customer's <span>review</span></h1>
+        <div class="box-container">
+            <div class="box">
+                <img src="img/quote-img.png" alt="" class="quote">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio, odit? Explicabo et voluptatibus, magnam sapiente nihil quis. Autem voluptate pariatur vero, nulla voluptatibus voluptas aut aspernatur commodi officia perferendis sequi?</p>
+
+                <img src="img/pic-1.png" class="user" alt="">
+                <h3>john deo</h3>
+                <div class="starts">'
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="img/quote-img.png" alt="" class="quote">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio, odit? Explicabo et voluptatibus, magnam sapiente nihil quis. Autem voluptate pariatur vero, nulla voluptatibus voluptas aut aspernatur commodi officia perferendis sequi?</p>
+
+                <img src="img/pic-2.png" class="user" alt="">
+                <h3>john deo</h3>
+                <div class="starts">'
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="img/quote-img.png" alt="" class="quote">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio, odit? Explicabo et voluptatibus, magnam sapiente nihil quis. Autem voluptate pariatur vero, nulla voluptatibus voluptas aut aspernatur commodi officia perferendis sequi?</p>
+
+                <img src="img/pic-3.png" class="user" alt="">
+                <h3>john deo</h3>
+                <div class="starts">'
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+            </div>
+
+
+        </div>
+    </section>
+
+<!-- Review section ends -->
+
+<!-- contact section starts -->
+
+<!-- contact section ends -->
+
     <script src="/js/script.js"></script>
 </body> 
 </html>
