--- a/index.html
+++ b/index.html
@@ -377,7 +377,29 @@
 <!-- Blogs section ends -->
 
 <!-- footer section starts -->
+    <section class="footer">
+        <div class="share">
+            <a href="#" class="fab fa-facebook-f"></a>
+            <a href="#" class="fab fa-twitter"></a>
+            <a href="#" class="fab fa-instagram"></a>
+            <a href="#" class="fab fa-linkedin"></a>
+            <a href="#" class="fab fa-pinterest"></a>
+        </div>
 
+        <div class="links">
+            <a href="#">home</a>
+            <a href="#">about</a>
+            <a href="#">menu</a>
+            <a href="#">products</a>
+            <a href="#">review</a>
+            <a href="#">concast</a>
+            <a href="#">blogs</a>
+        </div>
+
+        <div class="credit">
+            created by <span>mr.Pham Quan</span> | all rights reserved
+        </div>
+    </section>
 <!-- footer section ends -->
 
     <script src="/js/script.js"></script>
